objects/smagicinteract__Keyword_Action_Map__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trigger Action</fullName>
                </value>
                <value>
                    <fullName>Response Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Action</label>
        <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
        <relationshipName>KeywordActionMaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword</label>
        <referenceTo>smagicinteract__Keyword__c</referenceTo>
        <relationshipName>KeywordActionMaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Keyword Action Map</label>
    <nameField>
        <displayFormat>KAM-{00000000}</displayFormat>
        <label>Keyword Action Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keyword Action Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>